# python-mastery-AOC

./: .dockerignore  Dockerfile  PROGRESS.md  README.md  REPORT.md  docker-compose.yml  pyproject.toml  testing.py
00_course_outline/: README.md
01_primitive_types/: README.md  drills.py  drills_template.py  drills_template_old.py  notes_1.md  notes_1_old.md
02_control_flow/: README.md  drills.py  drills_my_attempts.py  drills_template.py  drills_v2.py  notes_2.md  notes_v2.md
03_functions/: README.md  drills.py  drills_my_attempts.py  drills_template.py  drills_v2.py  notes_3.md  notes_v2.md
04_data_structures/: README.md  README_old.md  drills.py  drills_template.py  drills_v2.py  notes_4.md  notes_v2.md
05_exceptions/: README.md  drills.py  drills_my_attempts.py  drills_template.py  drills_template_old.py  notes_5.md  notes_5_old.md
06_Classes_OOP/: README.md  drills.py  drills_A.py  drills_template.py  notes_6.md
Mini-Projects/: Calculator_v1.py  README.md  README_v2.md  number_guessing_game_v1.py  unit_converter_v1.2.py
Mini-Projects_hub/: IMPROVEMENT_PLAN.md  README.md  calculator_template.py  calculator_v2.py  grades_analyzer_v1.py  password_generator_validator_v1.py  password_toolkit_v2.py  test_converter_errors.py  test_final_validation.py  test_password_toolkit_v2.py  todo_manager_v1.py  todo_manager_v2.py  unit_converter_v1.2.py  unit_converter_v2.1.py  word_counter_v1.py
Mini-Projects_hub/calculator/: README.md  test_calculator_v2.py
Mini-Projects_hub/grades_analyzer/: README.md
play_ground/: car.py  main.py  student.py
(+16 files in other folders)
