[project]
name = "python-mastery"
version = "0.1.0"
description = "Hands-on notes, drills and mini-projects while following CodeWithMosh – Complete Python Mastery"
authors = [{ name = "YOUR NAME", email = "you@example.com" }]
requires-python = ">=3.12"

# ─ Runtime deps (none yet – we’ll add FastAPI, Typer, etc. later)
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "black>=24.4",
  "pytest>=8.2",
]

[tool.ruff]
# opinionated but easy to tweak
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]          # lightweight back-end
build-backend = "setuptools.build_meta"
