[project]
name = "python-mastery-learning"
version = "0.1.0"
description = "Comprehensive Python learning repository with systematic drills and mini-projects"
authors = [{ name = "Learning Developer", email = "learning@example.com" }]
requires-python = ">=3.12"

# This is a learning repository, not a package to be installed
# Dependencies are for development tools only
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.4",
  "black>=24.4", 
  "pytest>=8.2",
]

[tool.ruff]
# opinionated but easy to tweak
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"